[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = "3.6.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
anyhow = "1.0.79"
tower-http = { version = "0.5.1", features = ["fs"] }
tower-cookies = "0.10"
